HPLT 22-SEP-2024. Nav Menu change, Donation backend codes change, donation class establish to control and delete unnecessary codes.

--- a/MWF/Pages/Donation/DonationEdit.razor
+++ b/MWF/Pages/Donation/DonationEdit.razor
@@ -25,12 +25,12 @@
 
     protected override void OnInitialized()
     {
-        donation = DonationService.GetDonationById(Id);
+        //donation = DonationService.GetDonationById(Id);
     }
 
     private void HandleValidSubmit()
     {
-        DonationService.UpdateDonation(Id, donation);
+        //DonationService.UpdateDonation(Id, donation);
         Navigation.NavigateTo("/DonationList");
     }
 }
