--- a/MWF/Pages/Donation/DonationList.razor
+++ b/MWF/Pages/Donation/DonationList.razor
@@ -1,5 +1,4 @@
-﻿
-@page "/DonationList"
+﻿@page "/DonationList"
 @inject NavigationManager _navigationManager
 
 @using MWF.Pages;
@@ -10,6 +9,31 @@
 
 
 <h3>Donation List</h3>
+
+<style>
+    .donation
+    {
+        height:50px;
+        width:100%;
+        background-color:floralwhite;
+    }
+
+    body {
+        margin: 0;
+        padding: 0;
+    }
+
+</style>
+
+
+<div class="container donation">
+    <div class="row">
+        <div class="col">
+            <label>Search...</label>
+        </div>
+    </div>
+</div>
+
 
 <table class="table">
     <thead>
@@ -26,59 +50,80 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in DonationService.GetDonations())
+     @*    @foreach (var item in Model.donations)
         {
             <tr>
                 <td>@item.Rec_No</td>
                 <td>@item.Rec_Date.ToString("yyyy-MM-dd")</td>
-                <td>@item.DonorName</td>
-                <td>@item.Amount.ToString("###,###,###,##")</td>
-                @*<td><button @onclick="() => DonationEdit(item.DonorId)">Edit</button></td>*@
+                <td>@item.TitleDonor</td>
+                <td>@item.Amount.ToString("###,###,###.##")</td>
                 <td>
-                <a class="btn btn-danger" style="width:20%" href=""><i class="bi bi-pencil-fill me-2"></i></a>
-                    <button type="submit" @onclick="() => DeleteDonation(item.ID)" class="btn btn-dangerous"><i class="bi bi-trash3" style=" color: red;margin-right:5px"></i></button>
-                    <a class="btn btn-secondary" style="width:20%" href=""><i class="bi bi-printer-fill me-2"></i></a>
+                    <button @onclick="() => Model.UpdateDonation(item.ID)"><i class="bi bi-pencil-fill me-2"></i></button>
+                    <button @onclick="() => Model.DeleteDonation(item.ID)"><i class="bi bi-trash3" style=" color: red;margin-right:5px"></i></button>
+                    <button @onclick="()== Model.PrintDonation(item.ID)"><i class="bi bi-printer-fill me-2"></i></button>
                 </td>
+                <a class="btn btn-danger" style="width:20%" href=""><i class="bi bi-pencil-fill me-2"></i></a>
+                    <button type="submit" @onclick="() => Model.DeleteDonation(item.ID)" class="btn btn-dangerous"><i class="bi bi-trash3" style=" color: red;margin-right:5px"></i></button>
+                    <a class="btn btn-secondary" style="width:20%" href=""><i class="bi bi-printer-fill me-2"></i></a>
+                </td> 
             </tr>
-        }
+        } *@
     </tbody>
 </table>
 
 @code {
+    // public DonationService DonationService { get; set; } = new();
 
-    [Inject]
-    public DonationService DonationService { get; set; }
+    // private void DonationEdit(int ID)
+    // {
+    //     var _Text = $"SELECT * FROM [vew_Donation] WHERE [ID]={ID}";
+    //     var _Command = new SQLiteCommand(_Text, ConnectionClass.GetConnected());
+    //     var _Adapter = new SQLiteDataAdapter(_Command);
+    //     var _DataSet = new DataSet();
+    //     var _Table = new DataTable();
 
-    private void DonationEdit(int ID)
-    {
-        
-    }
-    private string MyMessage;
 
-    private void DeleteDonation(long ID)
-    {
-        if (ID > 0)
-        {
-            var TextDelete = "DELETE FROM [Donation] WHERE [ID] = @ID";
-            var SQLCommand = new SQLiteCommand(TextDelete, ConnectionClass.GetConnected());
-            SQLCommand.Parameters.AddWithValue("@ID", ID);
+    //     _Adapter.Fill(_DataSet, "Donation");
+    //     if(_DataSet.Tables.Count>0)
+    //     {
+    //         _Table = _DataSet.Tables[0];
+    //     }
+    //     if(_Table.Rows.Count > 0)
+    //     {
+    //         var _DataRow = _Table.Rows[0];
+    //     }
 
-            var effected = SQLCommand.ExecuteNonQuery();
-            if (effected > 0)
-            {
-                // Navigate to donation list after deletion
-                _navigationManager.NavigateTo("/DonationList");
-                MyMessage = "Donation has been deleted successfully.";
-            }
-            else
-            {
-                MyMessage = "Donation not deleted.";
-            }
-        }
-        else
-        {
-            MyMessage = "Donation ID must be greater than zero.";
-        }
-    }
+
+
+
+
+    // }
+    private string MyMessage { get; set; } = string.Empty;
+
+    // private void DonationDelete(long ID)
+    // {
+    //     if (ID > 0)
+    //     {
+    //         var TextDelete = "DELETE FROM [Donation] WHERE [ID] = @ID";
+    //         var SQLCommand = new SQLiteCommand(TextDelete, ConnectionClass.GetConnected());
+    //         SQLCommand.Parameters.AddWithValue("@ID", ID);
+
+    //         var effected = SQLCommand.ExecuteNonQuery();
+    //         if (effected > 0)
+    //         {
+    //             // Navigate to donation list after deletion
+    //             _navigationManager.NavigateTo("/DonationList");
+    //             MyMessage = "Donation has been deleted successfully.";
+    //         }
+    //         else
+    //         {
+    //             MyMessage = "Donation not deleted.";
+    //         }
+    //     }
+    //     else
+    //     {
+    //         MyMessage = "Donation ID must be greater than zero.";
+    //     }
+    // }
     
 }
