--- a/MWF/Pages/_Layout.cshtml
+++ b/MWF/Pages/_Layout.cshtml
@@ -4,117 +4,59 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
 
+
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+
+    <!-- Bootstrap CSS from CDN -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" asp-append-version="true" />
     <link href="css/MyStyle.css" rel="stylesheet" />
     <link href="AppliedBlazor.styles.css" rel="stylesheet" />
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
 
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+    <!-- Enable Blazor server prerendering -->
+    <component type="typeof(HeadOutlet)" render-mode="Server" />
 </head>
 <body>
     @RenderBody()
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <script src="~/js/Applied.js"></script>
     <script src="_framework/blazor.server.js"></script>
-    
+
 </body>
 </html>
 
+<style>
+    .content {
+        min-height: 100vh; /* Ensures content takes up at least full screen height */
+    }
+
+    footer {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color: #333;
+        color: #fff;
+        text-align: center;
+        padding: 10px;
+    }
+</style>
 
 <footer class="bg-dark text-white pt-0 pb-0">
 
-    <div class="container text-center text-md-left">
-        <div class="row text-center text-md-left">
-
-            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Quick Links</h5>
-                <p>
-                    <a href="/" class="text-white" style="font-size: 15px; text-decoration:none;">
-                        <i class="bi bi-arrow-right-short"></i>  Home
-                    </a>
-                </p>
-                <p>
-                    <a href="/About" class="text-white" style="font-size: 15px;text-decoration:none;">
-                    <i class="bi bi-arrow-right-short"></i>  About
-                    </a>
-                </p>
-                <p>
-                    <a href="/Gallery" class="text-white" style="font-size: 15px;text-decoration:none;">
-                        <i class="bi bi-arrow-right-short"></i>  Gallery
-                    </a>
-                </p>
-                <p>
-                    <a href="/Review" class="text-white" style="font-size: 15px;text-decoration:none;">
-                        <i class="bi bi-arrow-right-short"></i>  Review
-                    </a>
-                </p>
-                <p>
-                    <a href="/ContactUs" class="text-white" style="font-size: 15px;text-decoration:none;">
-                    <i class="bi bi-arrow-right-short"></i>  Contact Us
-                    </a>
-                </p>
-            </div>
-            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Account</h5>
-                <p>
-                    <a href="#" class="text-white" style="text-decoration:none;">
-                        <img src="/GalaryPic/JS BANK logo.jpg" style=height:"120vh"; alt="JS BANK" width="100px">
-                    </a>
-                </p>
-                <p>
-                    <a href="#" class="text-white" style="text-decoration:none;">ACC NO: 9606-1528035</a>
-                </p>
-                <p>
-                    <a href="#" class="text-white" style="text-decoration:none;">IBAN: PK88 JSBL 9606 0000 0152 8035</a>
-                </p>
-
-            </div>
-            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-                <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Contact</h5>
-
-                <p>
-                    <a href="https://wa.me/qr/XV3Z5SZHCQH7A1" class="text-white" style="font-size: 15px" ;>
-                        <i class="bi bi-whatsapp"></i>
-                        +92 347 9270155
-                    </a>
-                </p>
-                <p>
-                    <a href="https://www.facebook.com/Mumtazwelfare.pk" class="text-white" style="font-size: 14px" ;>
-                        <i class="bi bi-facebook"></i>
-                        MUMTAZWELFARE.PK
-                    </a>
-                </p>
-                <p>
-                    <a href="https://www.instagram.com/mumtaz_welfare/" class=" text-white" style="font-size: 15px" ;>
-                        <i class="bi bi-instagram"></i>
-                        mumtaz_welfare
-                    </a>
-                </p>
-                <p>
-                    <a href="mailto:Info@mumtazwelfare.org" class=" text-white" style="font-size: 15px" ;>
-                        <i class="bi bi-envelope"></i>
-                        Info@mumtazwelfare.org
-                    </a>
-                </p>
-                <p>
-                    <a href="" class=" text-white" style="font-size: 15px" ;>
-                        <i class="bi bi-telephone"></i>
-                        0347-9270155
-                    </a>
-                </p>
-
-
-            </div>
-        </div>
-
+   
+    <div>
         <hr class="mb-4">
 
         <div class="row align-items-center">
