--- a/MWF/Pages/_Layout.cshtml
+++ b/MWF/Pages/_Layout.cshtml
@@ -15,22 +15,22 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" asp-append-version="true" />
     <link href="css/MyStyle.css" rel="stylesheet" />
-    <link href="AppliedBlazor.styles.css" rel="stylesheet" />
+    <link href="MWF.styles.css" rel="stylesheet" />
 
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Enable Blazor server prerendering -->
     <component type="typeof(HeadOutlet)" render-mode="Server" />
 </head>
+
 <body>
     @RenderBody()
 
-
-
-
+    <h5>Add Sub foter here</h5>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    <script src="~/js/Applied.js"></script>
+    <script src="/js/Mumtaz.js"></script>
     <script src="_framework/blazor.server.js"></script>
 
 </body>
@@ -50,15 +50,13 @@
         color: #fff;
         text-align: center;
         padding: 10px;
+        height:40px;
     }
 </style>
 
 <footer class="bg-dark text-white pt-0 pb-0">
-
-   
     <div>
         <hr class="mb-4">
-
         <div class="row align-items-center">
             <div class="col-md-7 col-lg-8">
                 <p style="text-align:right">
@@ -68,7 +66,6 @@
                     </a>
                 </p>
             </div>
-
             <div class="col-md-5 col-lg-4">
                 <div class="text-center text-md-right">
 
@@ -98,6 +95,4 @@
             </div>
         </div>
     </div>
-
-
 </footer>
